--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-rest-framework==0.1.0
 djangorestframework==3.12.2
 gunicorn==20.0.4
 mysqlclient==2.0.3
+psycopg2==2.8.6
 pytz==2020.5
 sqlparse==0.4.1
 whitenoise==5.2.0
